use psi theme & logo

--- a/inst/app/www/stylesheet.css
+++ b/inst/app/www/stylesheet.css
@@ -22,3 +22,22 @@
 .info-box-number{
   color:#E08B38;
 }
+
+.well{
+  background-color:#52B6D9!important;
+}
+
+.main-header .logo{
+  background-color:#E08B38!important;
+}
+
+.main-header .navbar-static-top{
+  background-color:#E08B38!important;
+}
+
+.project-logo{
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  width:125px;
+}
